working on managing the applications manager

--- a/jobcard/templates/dirtemplates/cvnxtstep.html
+++ b/jobcard/templates/dirtemplates/cvnxtstep.html
@@ -1,6 +1,6 @@
 <div>
-    <div style="background-color: white;"> doing great
-        <p class="text-right"><button class="btn btn-primary btn-sm">call for interview</button>
-        <button class="btn btn-warning btn-sm">reject</button></p>
+    <div style="background-color: white;"> 
+        <p class="text-left" ><strong style="color: red;">Firstname:</strong> {{cvs.fname}}  <strong style="color: red;">Lastname:</strong> {{cvs.lname}}<p class="btn-group text-center"> <button class="btn btn-sm btn-primary"  >view more</button><button class="btn btn-primary btn-sm">call for interview</button>
+            <button class="btn btn-warning btn-sm" style="padding-right: 2px;">reject cv</button></p></p>
     </div>
 </div>
